<resources>
    <string name="ad">AD</string>
    <string name="already_fix_connect">Already repair connection</string>
    <string name="app_installed">The app has been installed and can be opened on the TV</string>
    <string name="app_name">HappyCast</string>
    <string name="authorization_failed">The device hasn’t been authorized</string>
    <string name="buisness_coopration_hint">Buisness coopration call：</string>
    <string name="button_i_know">I know</string>
    <string name="cancel">Cancel</string>
    <string name="check_android_version">System</string>
    <string name="check_cast_delay">Decoding</string>
    <string name="check_cast_delay_des">(Within 110ms is the best)</string>
    <string name="check_cast_unsupport">System version is too low,no support decoding detection</string>
    <string name="check_device">Device</string>
    <string name="check_mac">MAC/IP</string>
    <string name="check_manufacturer">Manufacturer</string>
    <string name="check_net">Network state</string>
    <string name="check_net_5g_des">(Connecting to 5GWi-Fi or wired network is the best)</string>
    <string name="check_net_delay">Network delay</string>
    <string name="check_net_delay_des">(Within 120ms is the best)</string>
    <string name="check_resolution">Resolution</string>
    <string name="check_result">Detect result</string>
    <string name="checking">Detecting...</string>
    <string name="checking_apk_update">Checking App update</string>
    <string name="choose_tv_name">Make a name for your TV</string>
    <string name="click_to_download">Press OK to download</string>
    <string name="close">No</string>
    <string name="connot_input_empty">Enter the content can not be empty</string>
    <string name="cpu_low_hint">（TV mirror unsupported ，we suggest you to exchange to 4 core tv or box）</string>
    <string name="current">（Current）</string>
    <string name="current_new_apk">Already the latest version</string>
    <string name="current_version">Version</string>
    <string name="detection">Equipment detection</string>
    <string name="download_error">Download Error</string>
    <string name="downloading_app">Downloading app</string>
    <string name="egrqudao">Egrqudao</string>
    <string name="failed_fix_connect">Repair connection failed, retry</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_av_async">Abnormal voice</string>
    <string name="feedback_choose_type">选择故障类型</string>
    <string name="feedback_input_empty">Pls input your phone number</string>
    <string name="feedback_landscape_failed">Landscape failed</string>
    <string name="feedback_loading_failed">Load failed</string>
    <string name="feedback_logging">按【确认键】勾选，将会记录您复现故障的操作日志</string>
    <string name="feedback_mirror_caton">Not smooth</string>
    <string name="feedback_mirror_play_exit">Flash exit</string>
    <string name="feedback_mirror_title">Screen cast</string>
    <string name="feedback_mirror_truddy">Mirror mosaic</string>
    <string name="feedback_no_screen">Black screen</string>
    <string name="feedback_play_exit">Flash exit</string>
    <string name="feedback_play_failed">Play failed</string>
    <string name="feedback_press_submmit">选中问题按【确认键】，将会自动提交反馈！</string>
    <string name="feedback_question_others">Other problems</string>
    <string name="feedback_recurrent">复现故障</string>
    <string name="feedback_recurrent_hint">遇到故障后, 请您按照以下操作来反馈故障, 以保证故障被精确定位, 以便解决您遇到的问题！</string>
    <string name="feedback_screen_scale">Image compressed</string>
    <string name="feedback_submit_failed">Failed,try again later</string>
    <string name="feedback_submit_ignore">Submitting now</string>
    <string name="feedback_submit_success">Success</string>
    <string name="feedback_submit_tip">Submitting...</string>
    <string name="feedback_url_caton">Not smooth</string>
    <string name="feedback_url_title">Video Cast</string>
    <string name="feedback_video_no_screen">Black screen</string>
    <string name="feedback_writer_log_hint">"系统将收集日志, 请您重试刚刚的投屏
操作, 当问题再次出现后请返回本页面
提交反馈即可"</string>
    <string name="find_new_apk_version">Find the new version，do you want to update？</string>
    <string name="fix_connect">Repair Connection</string>
    <string name="fps_max_auto">Auto</string>
    <string name="he">core(s)</string>
    <string name="help">Help</string>
    <string name="if_doubt_contact">Pls contact us if you have any question.</string>
    <string name="if_doubt_contact_alibaba">Pls contact us if you have any question.</string>
    <string name="input_device_name">Input device name</string>
    <string name="is_restore_default_setting">Reset default settings?</string>
    <string name="item_adaptive">Adaptiv</string>
    <string name="item_close">Close</string>
    <string name="item_compatibility">Compatibility</string>
    <string name="item_normal">Normal</string>
    <string name="item_open">Open</string>
    <string name="item_player_auto">Auto selection</string>
    <string name="item_player_lebo">Player2</string>
    <string name="item_player_system">Player1</string>
    <string name="jump">Jump</string>
    <string name="loading">Loading video tutorials %s</string>
    <string name="loading_data">Loading data...</string>
    <string name="mirror_model_Non_force">Non-Force</string>
    <string name="mirror_model_force">Force</string>
    <string name="mobile_network">Mobile Network</string>
    <string name="modify_success">Successful modification</string>
    <string name="net_error">net_error</string>
    <string name="network_not_connect">Network disconnected, please retry after network connect.</string>
    <string name="nolike_change">Refresh</string>
    <string name="ok">OK</string>
    <string name="one_more_back_exit">Press back once again to exit</string>
    <string name="open">Yes</string>
    <string name="protection">Protection</string>
    <string name="protection_is_open">Is open</string>
    <string name="protection_lan">protection for LAN</string>
    <string name="protection_lan_device_list">LAN Device List</string>
    <string name="protection_wan">protection for WAN</string>
    <string name="protection_wan_device_list">WAN Device List</string>
    <string name="question_support">Please take a picture of this page and send the picture to Hpplay’s WeChat Official Account,where you will benefit from one-on-one professional analysis and solutions.</string>
    <string name="question_support_alibaba">Please take a picture of this page and send the picture to QQ group,where you will benefit from one-on-one professional analysis and solutions.</string>
    <string name="question_support_dangbei_shadow">Please take a picture of this page and send the picture to DangbeiProjector’s WeChat Official Account,where you will benefit from one-on-one professional analysis and solutions.</string>
    <string name="repair">Quick repair</string>
    <string name="request_time_out">The request timeout, can click to retry!</string>
    <string name="restore_success">Reset Successed</string>
    <string name="retry">Retry</string>
    <string name="set_frame_rate">Mirror Res.</string>
    <string name="setting">Setting</string>
    <string name="setting_connect_us">Contact us</string>
    <string name="setting_connect_us_des">Choose the way you like</string>
    <string name="setting_define_name">Custom TV name</string>
    <string name="setting_define_name_des">Customizing your device name，current name：</string>
    <string name="setting_define_name_hint">Illegal characters，Please re-enter</string>
    <string name="setting_developer_options">Developer options</string>
    <string name="setting_developer_options_des">Refresh rate is displayed when the mirror is turned on</string>
    <string name="setting_forced_mirror_rotation">Forced mirror rotation</string>
    <string name="setting_forced_mirror_rotation_des">If you cannot switch to landscape，please click here</string>
    <string name="setting_max_frame_rate">Max FPS</string>
    <string name="setting_max_frame_rate_des">Good network, improved frame rate</string>
    <string name="setting_mirror_mode">Mirror mode</string>
    <string name="setting_mirror_mode_des">Blank screen &amp; transmission delay，try to switch mirror mode</string>
    <string name="setting_mirror_resolution">Mirroring resolution</string>
    <string name="setting_mirror_resolution_des">High resolution &amp; frame rates，high-definition experience</string>
    <string name="setting_restore_default_setting">Restore default settings</string>
    <string name="setting_restore_default_setting_des">Restore to system initial Settings</string>
    <string name="setting_version_update">Current version</string>
    <string name="setting_video_player">Video player</string>
    <string name="setting_video_player_des">Blank screen &amp; graphic lag，try to switch video player</string>
    <string name="sign_changed_hint">"HappyCast does not support the private modification signature, 
please contact the business classmate to solve: 
+86-0755-33942655"</string>
    <string name="soft_down_loading">Downloading</string>
    <string name="soft_local_update_info">Find new version</string>
    <string name="soft_update_hide">Hide</string>
    <string name="soft_update_time">Update time</string>
    <string name="soft_updating">Updating</string>
    <string name="to_hurry_click_wait">Click to soon,please wait for a moment</string>
    <string name="unknow">Unknow</string>
    <string name="update">Update now</string>
    <string name="user_use">Help and feedback</string>
    <string name="version_update">Version update</string>
    <string name="watermark_name">HappyCast</string>
    <string name="wechat_scan">"Use WeChat scan join HappyCast
 technology WeChat Official Account"</string>
    <string name="wechat_scan_dangbei_shadow">"Use WeChat scan join DangbeiCast
 WeChat Official Account"</string>
    <string name="wechat_scan_flow">Use WeChat scan QR code and follow us.</string>
    <string name="weixingongzonghao">WeChat Official Accounts</string>
    <string name="wifi_channel">Channel</string>
    <string name="wired_network">Wired Network</string>
    <string name="wireless_network">Wireless Network</string>
    <string name="allcast_res_auto">Auto</string>
    <string name="feedback_contact_title">Enter your phone number</string>
    <string name="feedback_feedback_tip">Click \"ok\" to upload the log automatically</string>
    <string name="mirror_model_auto">Auto</string>
    <string name="pin_code">Pin code</string>
    <string name="setting_version_update_des">Check and update to the latest version</string>
    <string name="allcast_res_fhd">1920*1080</string>
    <string name="allcast_res_hd">1280*720</string>
    <string name="app_id_Adayo">2055</string>
    <string name="app_id_GIMI">2009</string>
    <string name="app_id_HIMEDIA">2015</string>
    <string name="app_id_HIMEDIAhisi">2037</string>
    <string name="app_id_Haier">2039</string>
    <string name="app_id_Hispot">2048</string>
    <string name="app_id_Jcg">2064</string>
    <string name="app_id_alibaba">2004</string>
    <string name="app_id_chengzi">10234</string>
    <string name="app_id_coocaa">2010</string>
    <string name="app_id_coolux">2033</string>
    <string name="app_id_cvte">10444</string>
    <string name="app_id_damai">10328</string>
    <string name="app_id_damai_oversea">10329</string>
    <string name="app_id_dangbei_shadow">10685</string>
    <string name="app_id_dream_world">12441</string>
    <string name="app_id_dream_world_overseas">12442</string>
    <string name="app_id_egreatworld">2032</string>
    <string name="app_id_feixun">2079</string>
    <string name="app_id_fiberhome">12189</string>
    <string name="app_id_fujian_sva">10310</string>
    <string name="app_id_gome">10652</string>
    <string name="app_id_guanfang">2082</string>
    <string name="buisness_coopration_number">+86-0755-33942655</string>
</resources>