<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@mipmap/setting_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/px_positive_234" android:paddingRight="@dimen/px_positive_234" android:paddingBottom="@dimen/px_positive_168" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/px_positive_48" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_135" android:text="@string/feedback" />
            <TextView android:textSize="@dimen/px_positive_34" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_66" android:text="@string/feedback_recurrent_hint" />
            <TextView android:textSize="@dimen/px_positive_44" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_40" android:text="@string/feedback_recurrent" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_20">
                <CheckBox android:id="@id/feedback_recurrent_cb" android:background="@drawable/selector_checkbox_style" android:layout_width="@dimen/px_positive_59" android:layout_height="@dimen/px_positive_59" android:button="@null" />
                <TextView android:textSize="@dimen/px_positive_32" android:textColor="@color/trans_white_40" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px_positive_17" android:text="@string/feedback_logging" />
            </LinearLayout>
            <TextView android:textSize="@dimen/px_positive_44" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_59" android:text="@string/feedback_choose_type" />
            <TextView android:textSize="@dimen/px_positive_32" android:textColor="@color/trans_white_40" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_20" android:text="@string/feedback_press_submmit" />
            <TextView android:textSize="@dimen/px_positive_32" android:textColor="@color/trans_white_40" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_36" android:text="@string/feedback_url_title" />
            <LinearLayout android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_90" android:layout_marginTop="@dimen/px_positive_30">
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_action_tv" android:tag="1001" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_url_caton" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_no_screen_tv" android:tag="1002" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_video_no_screen" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_play_failed_tv" android:tag="1003" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_play_failed" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_play_exit_tv" android:tag="1004" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_play_exit" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_90" android:layout_marginTop="@dimen/px_positive_26">
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_screen_scale_tv" android:tag="1005" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_screen_scale" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_loading_failed_tv" android:tag="1006" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_loading_failed" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_av_async_tv" android:tag="1007" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_av_async" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_question_others_tv" android:tag="1008" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_question_others" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:textSize="@dimen/px_positive_32" android:textColor="@color/trans_white_40" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_54" android:text="@string/feedback_mirror_title" />
            <LinearLayout android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_90" android:layout_marginTop="@dimen/px_positive_30">
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_no_screen_tv" android:tag="2001" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_no_screen" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_play_exit_tv" android:tag="2002" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_mirror_play_exit" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_truddy_tv" android:tag="2003" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_mirror_truddy" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_caton_tv" android:tag="2004" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_mirror_caton" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_90" android:layout_marginTop="@dimen/px_positive_26">
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_av_async_tv" android:tag="2005" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_av_async" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_screen_scale_tv" android:tag="2006" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_screen_scale" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_landscape_failed_tv" android:tag="2007" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_landscape_failed" android:layout_weight="1.0" />
                <View android:layout_width="@dimen/px_positive_26" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/px_positive_25" android:textColor="@color/white" android:gravity="center" android:id="@id/feedback_mirror_question_others_tv" android:tag="2008" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="@dimen/px_positive_90" android:text="@string/feedback_question_others" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:textSize="@dimen/px_positive_44" android:textColor="@color/trans_white_40" android:layout_gravity="center_vertical" android:id="@id/uid_mac_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_54" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>