<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/dialog_device_name_bg" android:layout_width="@dimen/px_positive_838" android:layout_height="@dimen/px_positive_483" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/px_positive_42" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px_positive_72" android:text="@string/feedback_contact_title" />
        <EditText android:textSize="@dimen/px_positive_58" android:textColor="#ff3e3e3e" android:id="@id/dialog_contact_edit_txt" android:background="@drawable/selector_bg_setting_device_name_edittext" android:paddingLeft="@dimen/px_positive_24" android:paddingTop="@dimen/px_positive_8" android:paddingRight="@dimen/px_positive_24" android:paddingBottom="@dimen/px_positive_8" android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_98" android:layout_marginLeft="@dimen/px_positive_43" android:layout_marginTop="@dimen/px_positive_60" android:layout_marginRight="@dimen/px_positive_43" android:lines="1" android:maxLength="11" android:inputType="number" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/px_positive_98" android:layout_marginLeft="@dimen/px_positive_43" android:layout_marginTop="@dimen/px_positive_74" android:layout_marginRight="@dimen/px_positive_43" android:layout_marginBottom="@dimen/px_positive_43">
            <Button android:textSize="@dimen/px_positive_36" android:textColor="@color/white" android:gravity="center" android:id="@id/dialog_contact_jump" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="@dimen/px_positive_40" android:text="@string/jump" android:layout_weight="1.0" />
            <Button android:textSize="@dimen/px_positive_36" android:textColor="@color/white" android:gravity="center" android:id="@id/dialog_contact_ok" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/ok" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>